--- a/style.css
+++ b/style.css
@@ -561,7 +561,9 @@ transform: rotate(45deg);
 background: #fff;
 }
 
-footer{background:#a4b7c0;
+footer{
+	width: 100%;
+	background:#a4b7c0;
 box-shadow: inset 0 8px 15px #829199;
 }
 
